# coalesce

./: README.md  pyproject.toml
examples/gcp/vertex_ai_tests/: config.yaml  run_test.py  run_test_with_config.py  test_task.py  test_task_with_config.py
src/coalesce/: __init__.py  launcher.py  packager.py  task.py
tests/: test_launcher.py
